--- a/src/markdown/mas/procedure_data_sovon.Rmd
+++ b/src/markdown/mas/procedure_data_sovon.Rmd
@@ -14,6 +14,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 1.  een account aanmaken via <https://www.vogelatlas.be/user/newuser>
 
+    1.   Rechten aanvragen Sovon
+
 2.  open QGIS en kies `Kaartlagen` --\> `Databronnen beheren` --\> `WFS / OGC API objecten`
 
 3.  klik `nieuw` in het dialoogvenster om een nieuwe WFS verbinding te maken
@@ -28,13 +30,18 @@ knitr::opts_chunk$set(echo = TRUE)
     1.   Klik op toevoegen
     1.   Geef je gebruikersnaam en paswoord
     1.   Indien QGIS vraagt voor transformatie van EPSG:28992 naar een ander CRS, kan je dit best cancellen.
+
+Als alles goed gaat worden nu alle data waar je toegang toe hebt gekregen gedownload (dit kan even duren).
+Dit zijn de zogenaamde bezoekstippen.
 
 # QGIS v3.26
 ## Stappenplan
 
 1.  een account aanmaken via <https://www.vogelatlas.be/user/newuser>
 
-2.  open QGIS en kies `Kaartlagen` --\> `Databronnen beheren` --\> `WFS / OGC API objecten`
+    1.   Rechten aanvragen Sovon
+
+2.  open QGIS en kies `Kaartlagen` --\> `Databronnen beheren` --\> `WFS / OGC API - objecten`
 
 3.  klik `nieuw` in het dialoogvenster om een nieuwe WFS verbinding te maken
 
@@ -43,21 +50,21 @@ knitr::opts_chunk$set(echo = TRUE)
 
 1.  Maak een verbinding met de zopas toegevoegde WFS service
 
-    1.   Klik op verbinden
+    1.   Klik op Verbinden
+    1.   Geef je gebruikersnaam en paswoord en kik op ok
     1.   Selecteer de laag `ms:viewpoints`
+    1.   Wijzig Coördinaten Referentiesysteem naar EPSG:28992
     1.   Klik op toevoegen
-    1.   Geef je gebruikersnaam en paswoord
     1.   Indien QGIS vraagt voor transformatie van EPSG:28992 naar een ander CRS, kan je dit best cancellen.
-
-# Download
 
 Als alles goed gaat worden nu alle data waar je toegang toe hebt gekregen gedownload (dit kan even duren).
 Dit zijn de zogenaamde bezoekstippen.
+
+# Download
+
 Wanneer alle data gedownload zijn, kan je deze laag exporteren:
 
 1.  Zorg dat alle data zichtbaar zijn in de view
 
 2.  Selecteer `Kaartlagen` --\> `Opslaan als ...` en sla op als `Geojson` (of `Geopackage`) met als bestandsnaam `<YYYYMMDD_qgis_export_sovon_wfs>` en CRS `EPSG:28992`.
     Klik op OK (dit kan even duren).
-    
-
