--- a/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
+++ b/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
@@ -402,7 +402,7 @@ if (!file.exists(paste0(model_path, "fit_sbp_gelekwik_ZINB1.rds"))) {
   fit_sbp_gelekwik_ZINB1 <- add_criterion(
     sbp_gelekwik_ZINB1, c("kfold"), K = 5, cores = 5,
     folds = "stratified", group = "regio", 
-    file = paste0(model_path, "fit_sbp_gelekwik_ZINB"))
+    file = paste0(model_path, "fit_sbp_gelekwik_ZINB1"))
 } else {
   fit_sbp_gelekwik_ZINB1 <- readRDS(paste0(model_path, 
                                            "fit_sbp_gelekwik_ZINB1.rds"))
@@ -756,20 +756,235 @@ gele_kwik_df2_2022 %>%
 ```
 
 
-### Model fitten sbp
+### Modellen sbp
+
+Fit modellen.
 
 ```{r}
-test_pois1 <- 
-  brm(formula = bf(aantal ~ sbp*regio),
+form2 <- bf(aantal ~ sbp*regio)
+
+# 1. Poisson
+sbp_gelekwik_pois12 <- 
+  brm(formula = form2,
       data = gele_kwik_df2_2022, 
       family = poisson(), 
+      chains = nchains,
+      warmup = burnin,
+      iter = niter,
+      cores = nparallel,
+      backend = "cmdstanr",
+      file = paste0(model_path, "sbp_gelekwik_pois12"),
+      file_refit = "on_change")
+
+summary(sbp_gelekwik_pois12)
+plot(sbp_gelekwik_pois12)
+
+# 2. Negative binomial
+sbp_gelekwik_negbin12 <- 
+  brm(formula = form2,
+      data = gele_kwik_df2_2022, 
+      family = negbinomial(), 
+      chains = nchains, 
+      warmup = burnin, 
+      iter = niter, 
+      cores = nparallel, 
+      backend = "cmdstanr",
+      file = paste0(model_path, "sbp_gelekwik_negbin12"),
+      file_refit = "on_change")
+
+summary(sbp_gelekwik_negbin12)
+plot(sbp_gelekwik_negbin12)
+
+# 3. Zero-inflated Poisson
+sbp_gelekwik_ZIP12 <- 
+  brm(formula = form2,
+      data = gele_kwik_df2_2022, 
+      family = zero_inflated_poisson(), 
+      chains = nchains, 
+      warmup = burnin, 
+      iter = niter, 
+      cores = nparallel, 
+      backend = "cmdstanr",
+      file = paste0(model_path, "sbp_gelekwik_ZIP12"),
+      file_refit = "on_change")
+
+summary(sbp_gelekwik_ZIP12)
+plot(sbp_gelekwik_ZIP12)
+
+# 4. Zero-inflated Negative binomial
+sbp_gelekwik_ZINB12 <- 
+  brm(formula = form2,
+      data = gele_kwik_df2_2022, 
+      family = zero_inflated_negbinomial(), 
+      chains = nchains, 
+      warmup = burnin, 
+      iter = niter, 
+      cores = nparallel, 
+      backend = "cmdstanr",
+      file = paste0(model_path, "sbp_gelekwik_ZINB12"),
+      file_refit = "on_change")
+
+summary(sbp_gelekwik_ZINB12)
+plot(sbp_gelekwik_ZINB12)
+```
+
+Vergelijk modellen.
+
+```{r}
+# Perform K-fold cross-validation
+if (!file.exists(paste0(model_path, "fit_sbp_gelekwik_pois12.rds"))) {
+  fit_sbp_gelekwik_pois12 <- add_criterion(
+    sbp_gelekwik_pois12, c("kfold"), K = 5, cores = 5,
+    folds = "stratified", group = "regio", 
+    file = paste0(model_path, "fit_sbp_gelekwik_pois12"))
+} else {
+  fit_sbp_gelekwik_pois12 <- readRDS(paste0(model_path, 
+                                           "fit_sbp_gelekwik_pois12.rds"))
+}
+if (!file.exists(paste0(model_path, "fit_sbp_gelekwik_negbin12.rds"))) {
+  fit_sbp_gelekwik_negbin12 <- add_criterion(
+    sbp_gelekwik_negbin12, c("kfold"), K = 5, cores = 5,
+    folds = "stratified", group = "regio", 
+    file = paste0(model_path, "fit_sbp_gelekwik_negbin12"))
+} else {
+  fit_sbp_gelekwik_negbin12 <- readRDS(paste0(model_path, 
+                                           "fit_sbp_gelekwik_negbin12.rds"))
+}
+if (!file.exists(paste0(model_path, "fit_sbp_gelekwik_ZIP12.rds"))) {
+  fit_sbp_gelekwik_ZIP12 <- add_criterion(
+    sbp_gelekwik_ZIP12, c("kfold"), K = 5, cores = 5,
+    folds = "stratified", group = "regio", 
+    file = paste0(model_path, "fit_sbp_gelekwik_ZIP12"))
+} else {
+  fit_sbp_gelekwik_ZIP12 <- readRDS(paste0(model_path, 
+                                           "fit_sbp_gelekwik_ZIP12.rds"))
+}
+if (!file.exists(paste0(model_path, "fit_sbp_gelekwik_ZINB12.rds"))) {
+  fit_sbp_gelekwik_ZINB12 <- add_criterion(
+    sbp_gelekwik_ZINB12, c("kfold"), K = 5, cores = 5,
+    folds = "stratified", group = "regio", 
+    file = paste0(model_path, "fit_sbp_gelekwik_ZINB1"))
+} else {
+  fit_sbp_gelekwik_ZINB12 <- readRDS(paste0(model_path, 
+                                           "fit_sbp_gelekwik_ZINB12.rds"))
+}
+```
+
+```{r}
+models_12 <- data.frame(
+  model = c("Poisson", 
+            "Negative binomial",
+            "Zero-inflated Poisson",
+            "Zero-inflated Negative binomial"),
+  naam =  c("fit_sbp_gelekwik_pois12", 
+            "fit_sbp_gelekwik_negbin12",
+            "fit_sbp_gelekwik_ZIP12",
+            "fit_sbp_gelekwik_ZINB12")
+  )
+
+# Comparison among models
+comparisons12 <- loo_compare(fit_sbp_gelekwik_pois12, 
+                           fit_sbp_gelekwik_negbin12, 
+                           fit_sbp_gelekwik_ZIP12, 
+                           fit_sbp_gelekwik_ZINB12, 
+                           criterion = "kfold")[, c(1, 2)] %>%
+                as.data.frame() %>%
+                rownames_to_column("naam") %>% 
+                full_join(models_12, by = join_by(naam))
+
+rbind(
+  fit_sbp_gelekwik_pois12$criteria$kfold$estimates[, "Estimate"],
+  fit_sbp_gelekwik_negbin12$criteria$kfold$estimates[, "Estimate"],
+  fit_sbp_gelekwik_ZIP12$criteria$kfold$estimates[, "Estimate"], 
+  fit_sbp_gelekwik_ZINB12$criteria$kfold$estimates[, "Estimate"]
+  ) %>%
+  as.data.frame() %>%
+  mutate(model = models_12$model) %>%
+  full_join(comparisons12, by = "model") %>%
+  mutate(CI_ll = elpd_diff  + qnorm(0.025) * se_diff,
+         CI_ul = elpd_diff  + qnorm(0.975) * se_diff) %>%
+  select(model, naam, everything()) %>%
+  arrange(desc(elpd_diff)) %>%
+  kable(digits = 3)
+```
+
+Model fit.
+
+```{r}
+pp_check(test_pois1, type = "bars_grouped", ndraws = 100, 
+         group = "regio", facet_args = list(ncol = 1, scales = "free_y"))
+```
+
+```{r}
+pp_check(test_pois1, type = "bars_grouped", ndraws = 100, 
+         group = "sbp", facet_args = list(ncol = 1, scales = "free_y"))
+```
+
+Resultaten.
+
+De Moeren:
+
+```{r}
+hypothesis(test_pois1,
+           "sbpbuiten = 0")
+```
+
+Oostelijke leemstreek:
+
+```{r}
+hypothesis(test_pois1,
+           "sbpbuiten + sbpbuiten:regioOostelijkeleemstreek = 0")
+```
+
+Visueel:
+
+```{r}
+plot(conditional_effects(test_pois1, 
+                         effects = "regio:sbp"))
+```
+
+### Model fitten area_prop_sb
+
+```{r}
+test_pois2 <- 
+  brm(formula = bf(aantal ~ regio*area_prop_sb),
+      data = gele_kwik_df2_2022, 
+      family = zero_inflated_poisson(), 
       chains = nchains, 
       warmup = burnin, 
       iter = niter, 
       cores = nparallel, 
       backend = "cmdstanr")
+
+summary(test_pois2)
+plot(test_pois2)
 ```
 
+```{r}
+pp_check(test_pois2, type = "bars_grouped", ndraws = 100, 
+         group = "regio", facet_args = list(ncol = 1, scales = "free_y"))
+```
+
+De Moeren:
+
+```{r}
+hypothesis(test_pois2,
+           "area_prop_sb = 0")
+```
+
+Oostelijke leemstreek:
+
+```{r}
+hypothesis(test_pois2,
+           "area_prop_sb + regioOostelijkeleemstreek:area_prop_sb = 0")
+```
+
+Visueel:
+
+```{r}
+plot(conditional_effects(test_pois2, 
+                         effects = "area_prop_sb:regio"))
+```
 
 ## Selectie verklarende variabelen
 
