--- a/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
+++ b/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
@@ -1219,28 +1219,72 @@ Zie de McLatchie et al paper die ik onlangs doorstuurde. Appendix B onder andere
 
 ### Referentiemodel
 
+```{r}
+library(projpred)
+```
+
+
+```{r}
+# Data
+data_projpred <- gele_kwik_df2_2022 %>%
+  filter(regio == "Oostelijke leemstreek") %>%
+  mutate(area_prop_sb_cat = case_when(
+    area_prop_sb == 0 ~ "area_0",
+    area_prop_sb < 0.1 ~ "area_<0.1",
+    area_prop_sb <= 0.2 ~ "area_0.1-0.2",
+    TRUE ~ "area_>0.2"
+  ))
+
+# MCMC parameters
+nchains <- 3           # number of chains
+niter <- 10000         # number of iterations (incl. burn-in)
+burnin <- niter / 5    # number of initial samples to discard (burn-in)
+nparallel <- nchains   # number of cores used for parallel computing
+thinning <- 4
+
+# Priors
+beta_prior_projpred <- set_prior(R2D2(mean_R2 = 0.5, prec_R2 = 2, cons_D2 = 1, 
+                                      autoscale = TRUE))
+
+# Formula
+indices <- which(names(data_projpred) %in% c("id", "aantal", "plotnaam", 
+                                             "regio", "jaar", "jaar.f", 
+                                             "area_prop_sb", 
+                                             "area_prop_bo_overig",
+                                             "area_prop_sb_cat",
+                                             "is_sbp"))
+predictor_names <- names(data_projpred)[-indices]
+form_projpred <- bf(paste("aantal", "~", paste(predictor_names, 
+                                               collapse = " + ")))
+```
 
 
 ```{r, eval=FALSE}
-library(projpred)
-
-sbp_gelekwik_negbin12 <- 
-  brm(formula = form2,
-      data = gele_kwik_df2_2022, 
-      family = negbinomial(), 
+ref_model1 <- 
+  brm(formula = form_projpred,
+      data = data_projpred, 
+      family = negbinomial(),
+      prior = beta_prior_projpred,
       chains = nchains, 
       warmup = burnin, 
-      iter = niter, 
+      iter = niter,
+      thin = thinning,
       cores = nparallel, 
       backend = "cmdstanr",
-      file = paste0(model_path, "sbp_gelekwik_negbin12"),
+      file = paste0(model_path, "ref_model1"),
       file_refit = "on_change")
 
-refm_poiss <- get_refmodel(brmpois1, latent = TRUE)
-vs_lat <- cv_varsel(refm_poiss,
-                    ### Only for the sake of speed (not recommended in general):
-                    validate_search = FALSE, nclusters_pred = 20)
-plot(vs_lat, stats = "mlpd", deltas = TRUE)
+# fast varsel for finding a suitable value for argument nterms_max
+cvvs_fast <- cv_varsel(refm_poiss,
+                       # for speed, better is "forward"
+                       method = "L1",
+                       # for speed, better is "LOO" or higher K
+                       cv_method = "kfold",
+                       K = 2,
+                       nterms_max = length(predictor_names),
+                       # Only for the sake of speed
+                       validate_search = FALSE)
+plot(cvvs_fast, stats = "mlpd", deltas = TRUE)
 ```
 
 
