--- a/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
+++ b/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
@@ -1243,7 +1243,7 @@ nparallel <- nchains   # number of cores used for parallel computing
 thinning <- 4
 
 # Priors
-beta_prior_projpred <- set_prior(R2D2(mean_R2 = 0.5, prec_R2 = 2, cons_D2 = 1, 
+beta_prior_projpred <- set_prior(R2D2(mean_R2 = 0.3, prec_R2 = 5, cons_D2 = 10, 
                                       autoscale = TRUE))
 
 # Formula
@@ -1262,25 +1262,25 @@ form_projpred <- bf(paste("aantal", "~", paste(predictor_names,
 ```{r, eval=FALSE}
 ref_model1 <- 
   brm(formula = form_projpred,
-      data = data_projpred, 
+      data = data_projpred %>%
+        mutate(across(.cols = c(where(is.numeric), -aantal), 
+                      .fns = ~ as.numeric(scale(.x)))), 
       family = negbinomial(),
       prior = beta_prior_projpred,
       chains = nchains, 
       warmup = burnin, 
       iter = niter,
-      thin = thinning,
-      cores = nparallel, 
+      cores = nparallel,
       backend = "cmdstanr",
       file = paste0(model_path, "ref_model1"),
       file_refit = "on_change")
 
 # fast varsel for finding a suitable value for argument nterms_max
-cvvs_fast <- cv_varsel(refm_poiss,
+cvvs_fast <- cv_varsel(ref_model1,
                        # for speed, better is "forward"
                        method = "L1",
                        # for speed, better is "LOO" or higher K
-                       cv_method = "kfold",
-                       K = 2,
+                       cv_method = "LOO",
                        nterms_max = length(predictor_names),
                        # Only for the sake of speed
                        validate_search = FALSE)
